# treelite

./: .clang-format  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  ACKNOWLEDGMENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NEWS.md  NOTICE  README.md  VERSION  azure-pipelines.yml  sklearn_example.py
python/: .pylintrc  MANIFEST.in  README.rst  pyproject.toml  setup-pip.py  setup.py
python/packager/: build_config.py  nativelib.py  pep517.py  sdist.py
python/pip_util/: MANIFEST.in  setup_pip.py
python/treelite/: VERSION  __init__.py  annotator.py  build-python.sh  compat.py  core.py  frontend.py  libpath.py  model.py  model_builder.py  model_builder_legacy.py  path_config.py  util.py  warn.py
python/treelite/common/: __init__.py  compat.py  libpath.py  util.py
python/treelite/contrib/: __init__.py  clang.py  gcc.py  msvc.py  util.py
python/treelite/experimental/: __init__.py  model_builder.py
python/treelite/gallery/: __init__.py
python/treelite/gallery/sklearn/: __init__.py  common.py  gbm_classifier.py  gbm_multi_classifier.py  gbm_regressor.py  rf_classifier.py  rf_multi_classifier.py  rf_regressor.py
python/treelite/gtil/: __init__.py  gtil.py
python/treelite/runtime/: __init__.py  predictor.py
python/treelite/serialize/: __main__.py
python/treelite/sklearn/: __init__.py  common.py  gbm_classifier.py  gbm_multi_classifier.py  gbm_regressor.py  importer.py  isolation_forest.py  rf_classifier.py  rf_iforest.py  rf_multi_classifier.py  rf_regressor.py
runtime/: CMakeLists.txt
runtime/java/: CMakeLists.txt  Data.java
runtime/java/ml/dmlc/treelite/: Data.java
runtime/java/treelite4j/: create_jni.py  pom.xml
runtime/java/treelite4j/src/main/java/ml/dmlc/treelite/: Data.java
runtime/java/treelite4j/src/main/java/ml/dmlc/treelite4j/: BatchBuilder.java  Data.java  DenseBatch.java  Entry.java  InferenceEngine.java  NativeLibLoader.java  Predictor.java  SparseBatch.java  TreeliteError.java  TreeliteJNI.java
runtime/java/treelite4j/src/main/java/ml/dmlc/treelite4j/java/: Data.java  (+11 more)
runtime/java/treelite4j/src/main/scala/ml/dmlc/treelite4j/: DataPoint.scala  DataPointFloat64.scala
runtime/java/treelite4j/src/native/: treelite4j.cpp  treelite4j.h
runtime/java/treelite4j/src/test/java/ml/dmlc/treelite4j/: DenseBatchTest.java  PredictorTest.java  SparseBatchTest.java
runtime/java/treelite4j/src/test/resources/mushroom_example/: CMakeLists.txt  agaricus.txt.test  mushroom.c
runtime/native/: CMakeLists.txt  FILELIST
runtime/native/cmake/: Utils.cmake
runtime/native/include/treelite/: c_api_runtime.h  common.h  entry.h  predictor.h
runtime/native/python/: predictor.py
runtime/native/python/treelite_runtime/: __init__.py  libpath.py  predictor.py
runtime/native/src/: predictor.cc
runtime/native/src/c_api/: c_api_runtime.cc
runtime/native/src/thread_pool/: thread_pool.h
runtime/python/: MANIFEST.in  setup.py
runtime/python/treelite_runtime/: __init__.py  libpath.py  predictor.py  util.py  warn.py
src/: CMakeLists.txt  adt_value_type.cc  annotator.cc  cli_main.cc  data.cc  field_accessor.cc  filesystem.cc  json_serializer.cc  logging.cc  model.cc  model_concat.cc  optable.cc  predictor.cc  reference_serializer.cc  semantic.cc  serializer.cc  tables.cc  traversal.h  tree.proto  typeinfo.cc
src/c_api/: c_api.cc  c_api_common.cc  c_api_common.h  c_api_error.cc  c_api_error.h  c_api_runtime.cc  c_api_utils.h  field_accessor.cc  gtil.cc  logging.cc  model.cc  model_builder.cc  model_loader.cc  optable.cc  serializer.cc  sklearn.cc
src/common/: filesystem.h  math.h
src/compiler/: ast_java.cc  ast_native.cc  ast_native.h  compiler.cc  failsafe.cc  failsafe.h  param.h  pred_transform.cc  pred_transform.h  recursive.cc  simple.cc
src/compiler/ast/: annotate.cc  ast.cc  ast.h  ast.proto  breakup.cc  build.cc  builder.cc  builder.h  count_descendant.cc  dump.cc  fold_code.cc  is_categorical_array.cc  load_data_counts.cc  quantize.cc  serialize.cc  split.cc
src/compiler/common/: categorical_bitmap.h  code_folding_util.h  format_util.h
src/compiler/elf/: elf_formatter.cc  elf_formatter.h
src/compiler/java/: code_folder_template.h  data_interface.h  entry_type.h  get_num_feature.h  get_num_output_group.h  inference_engine_interface.h  main_template.h  node_type.h  pom_xml.h  pred_transform.h  predictor_java_wrapper_template.h  qnode_template.h  quantize_func.h
src/compiler/native/: code_folder_template.h  get_num_feature.h  get_num_output_group.h  header.h  header_template.h  main_template.h  pred_transform.h  qnode_template.h  quantize_func.h  typeinfo_ctypes.h
src/data/: data.cc
src/enum/: operator.cc  task_type.cc  tree_node_type.cc  typeinfo.cc
src/frontend/: array_builder.cc  builder.cc  interactive.cc  json_importer.cc  lightgbm.cc  protobuf.cc  sklearn.cc  xgboost.cc  xgboost_json.cc  xgboost_util.cc
src/frontend/xgboost/: xgboost.h  xgboost_json.h
src/gtil/: config.cc  output_shape.cc  postprocessor.cc  postprocessor.h  pred_transform.cc  pred_transform.h  predict.cc
src/model_builder/: metadata.cc  model_builder.cc
src/model_builder/detail/: json_parsing.h
src/model_loader/: lightgbm.cc  sklearn.cc  xgboost_json.cc  xgboost_legacy.cc
src/model_loader/detail/: lightgbm.h  string_utils.h  xgboost.cc  xgboost.h  xgboost_json.h
src/parser/: lightgbm.cc  parser.cc  xgboost.cc
src/predictor/: predictor.cc
src/predictor/thread_pool/: spsc_queue.h  thread_pool.h
src/thread_pool/: spsc_queue.h  thread_pool.h
src/threading_utils/: parallel_for.h
tests/cpp/: CMakeLists.txt  test_compiler_param.cc  test_frontend.cc  test_gtil.cc  test_main.cc  test_model_builder.cc  test_model_concat.cc  test_model_loader.cc  test_serializer.cc  test_threading_utils.cc  test_utils.cc
tests/cython/: CMakeLists.txt  compatibility_tester.py  frame_inspector.py  pyproject.toml  serializer.pyx  setup.py  test_serialization.py  test_serializer.py  test_serializer_round_trip.py
tests/example_app/: CMakeLists.txt  example.c  example.cc
(+229 files in other folders)
